# factorioops

./: Cargo.toml  README.md  compose.yaml  deny.toml
.github/actions/setup-mise/: action.yaml
.github/workflows/: lint.yaml  tests.yaml
.mise/: config.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/routes/: auth.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/auth/src/passwords/: mod.rs
crates/core/: Cargo.toml
crates/core/src/result/: error.rs  mod.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  user.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs  user.rs
crates/worker/: Cargo.toml
frontend/: .cta.json  README.md  package.json  pnpm-lock.yaml
