[workspace]
resolver = "3"
members = ["crates/api","crates/core","crates/db", "crates/main", "crates/models", "crates/worker"]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"

serde = { version = "1.0", features = ["derive"] }
ulid = { version = "1.2", features = ["serde", "uuid"] }

clap = { version = "4.6", features = ["derive", "env"] }

axum = { version = "0.8", features = ["macros"] }
utoipa = { version = "5.5", features = ["axum_extras", "yaml", "preserve_order"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }

mongodb = { version = "3.7", features = ["zstd-compression", "tracing-unstable", "bson-3"] }
bson = { version = "3.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1.52", features = ["full"] }

tracing = "0.1"
tracing-subscriber = "0.3"

opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.33"
opentelemetry-appender-tracing = "0.32"

# Monorepo
factorioops-api = { path = "crates/api" }
factorioops-core = { path = "crates/core" }
factorioops-db = { path = "crates/db" }
factorioops-models = { path = "crates/models" }
factorioops-worker = { path = "crates/worker" }
