[workspace]
resolver = "3"
members = ["crates/api", "crates/auth","crates/core","crates/db", "crates/main", "crates/models", "crates/worker"]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"

# Password hashing is expensive by construction.  Build the hashing libraries
# with optimizations to significantly speed up tests.
[profile.dev.package.argon2]
opt-level = 3
[profile.dev.package.rust-argon2]
opt-level = 3

[profile.release]
panic = "abort"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"

async-trait = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.14", default-features = false, features = ["alloc", "macros"] }
ulid = { version = "1.2", features = ["serde", "uuid"] }
secrecy = { version = "0.10", features = ["serde"] }
rand = "0.9"
newtype_derive = "0.1"
parse-display = "0.11"

clap = { version = "4.6", features = ["derive", "env"] }

axum = { version = "0.8", features = ["macros"] }
utoipa = { version = "5.5", features = ["axum_extras", "yaml", "preserve_order"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
axum-otel = "0.32"
tower-http = { version = "0.6", features = ["request-id", "trace"] }
tower-otel = { version = "0.10", features = ["axum"] }
tower = { version = "0.5", default-features = false }

mongodb = { version = "3.7", features = ["zstd-compression", "tracing-unstable", "opentelemetry", "bson-3"] }
bson = { version = "3.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1.52", features = ["full"] }
futures = "0.3"

tracing = "0.1"
tracing-subscriber = "0.3"

opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.33"
opentelemetry-appender-tracing = "0.32"

# Monorepo
factorioops-api = { path = "crates/api" }
factorioops-auth = { path = "crates/auth" }
factorioops-core = { path = "crates/core" }
factorioops-db = { path = "crates/db" }
factorioops-models = { path = "crates/models" }
factorioops-worker = { path = "crates/worker" }
