[package]
name = "factorioops-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true

axum.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar.workspace = true

tracing.workspace = true
axum-otel.workspace = true
tower-http.workspace = true
tower.workspace = true
tower-otel.workspace = true
opentelemetry.workspace = true

factorioops-auth = { workspace = true, features = ["passwords"] }
factorioops-models.workspace = true
