[package]
name = "factorioops-db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
ulid.workspace = true
async-trait.workspace = true
mongodb.workspace = true
futures.workspace = true
tracing.workspace = true

factorioops-models = { workspace = true, features = ["bson"] }
factorioops-core.workspace = true
