[package]
name = "factorioops"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true

factorioops-api.workspace = true
factorioops-core.workspace = true
factorioops-db.workspace = true
