[package]
name = "factorioops-models"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
bson = ["dep:bson", "dep:serde"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true

ulid.workspace = true
chrono.workspace = true
tracing.workspace = true

serde = { workspace = true, optional = true }
bson = { workspace = true, optional = true }

factorioops-core.workspace = true
